# Workflow-Example

./: CMakeLists.txt
.github/workflows/: blank.yml  build sources.yml  build.yml  cmake.yml
